<resources>
    <string name="app_name">demo</string>
    <string name="user_name">用户名：</string>
    <string name="password">密 码：</string>
    <string name="login">登 陆</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_username_hint">请输入用户名</string>
    <string name="bt_login">登陆</string>
    <string name="bt_register">注册</string>
    <string name="tv_confirm_password">确认密码:</string>
    <string name="Email">Email:</string>
    <string name="et_email_hint">请输入邮箱地址</string>
    <string name="loading">加载中...</string>
</resources>
