<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/_rst_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:text="@string/user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1"/>

    <EditText
        android:id="@+id/rst_et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_username_hint"
        app:layout_constraintTop_toTopOf="@id/_rst_tv_username"
        app:layout_constraintBottom_toBottomOf="@id/_rst_tv_username"
        app:layout_constraintLeft_toRightOf="@id/_rst_tv_username"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:textSize="14dp"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/rst_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/rst_tv_password"
        app:layout_constraintRight_toRightOf="@id/rst_tv_password"
        app:layout_constraintTop_toBottomOf="@id/rst_tv_confirm"
        android:layout_marginTop="30dp"
        android:text="@string/Email"/>

    <EditText
        android:id="@+id/rst_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/rst_et_password"
        app:layout_constraintRight_toRightOf="@id/rst_et_password"
        app:layout_constraintTop_toTopOf="@id/rst_tv_email"
        app:layout_constraintBottom_toBottomOf="@id/rst_tv_email"
        android:hint="@string/et_email_hint"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/rst_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/_rst_tv_username"
        app:layout_constraintLeft_toLeftOf="@id/_rst_tv_username"
        app:layout_constraintRight_toRightOf="@id/_rst_tv_username"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/rst_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_password_hint"
        app:layout_constraintLeft_toLeftOf="@id/rst_et_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/rst_tv_password"
        app:layout_constraintBottom_toBottomOf="@id/rst_tv_password"
        android:textSize="14dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/rst_tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirm_password"
        app:layout_constraintLeft_toLeftOf="@id/rst_tv_password"
        app:layout_constraintRight_toRightOf="@id/rst_tv_password"
        app:layout_constraintTop_toBottomOf="@id/rst_tv_password"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/rst_et_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/rst_et_password"
        app:layout_constraintRight_toRightOf="@id/rst_et_password"
        app:layout_constraintTop_toTopOf="@id/rst_tv_confirm"
        app:layout_constraintBottom_toBottomOf="@id/rst_tv_confirm"
        android:hint="@string/tv_confirm_password"
        android:textSize="14dp"/>

    <Button
        android:id="@+id/rst_bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/bt_register"/>
</android.support.constraint.ConstraintLayout>